# TotalControl

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  ROADMAP.md  WHATS_NEW.md  build_gui_debug.bat
calibration/: arm_sweep_final.csv  arm_timing_2026-07-21_ILCE-7C_solo.csv  arm_timing_2026-07-21_per_model.csv  bracket_calibration_10x.csv  buffer_depletion_sweep.csv
data/: TotalControlDefaultConfig.db  schema_data.sql
docs/: CrSDK_quick_reference.md  alpha_cleancode_violations.md  arm_latency_bionz_whitepaper.md  solar_eclipse_exposure_model.md  tooltips_review.md
include/: CameraController.h  DriveModeNames.h  Renderer3D.h  SequencerEngine.h
sequences/: eclipse2026_240mm_f56.json  eclipse2026_240mm_test.json  eclipse2026_900mm_f10.json  eclipse2026_C3_burst_test.json  eclipse2026_example.json  test_sequence.json
src/: CameraController.cpp  DriveModeNames.cpp  SequencerEngine.cpp  main.cpp  srv.rc
src/cli/: cli.rc  main.cpp
src/daemon/: CommandHandler.cpp  CommandHandler.h  PipeServer.cpp  PipeServer.h
src/gui/: App.cpp  App.h  BesselCalc.cpp  BesselCalc.h  Database.cpp  Database.h  EclipseEntry.h  ElevationClient.cpp  ElevationClient.h  EphClient.cpp  EphClient.h  GeocodeClient.cpp  GeocodeClient.h  IersDeltaTClient.cpp  IersDeltaTClient.h  IqpClient.cpp  IqpClient.h  PipeClient.cpp  PipeClient.h  SdoClient.cpp  SdoClient.h  Timeline.h  Timezones.h  TzEntry.h  gui.rc  main_gui.cpp
src/tc/: main.cpp
tools/: extract_props.py
